src/style.css
@import "tailwindcss";

:root {
  font-family: Inter, sans-serif;
  font-feature-settings: "liga" 1, "calt" 1; /* fix for Chrome */
}

@supports (font-variation-settings: normal) {
  :root {
    font-family: InterVariable, sans-serif;
  }
}

@theme {
  --text-sm--line-height: 1.5rem;
  --font-sans: Inter, sans-serif;
}

body {
  background-image: linear-gradient(to right, #dddddd, #eddfdc);
  margin: 0; /* 移除默认外边距 */
  overflow-x: hidden; /* 防止水平滚动条 */
}

/* 自定义滚动条样式 */
::-webkit-scrollbar {
  width: 8px; /* 设置滚动条的宽度 */
  height: 8px; /* 设置滚动条的高度 */
}

::-webkit-scrollbar-thumb {
  background-color: #888; /* 设置滑块颜色 */
  border-radius: 4px; /* 设置滑块圆角 */
}

::-webkit-scrollbar-thumb:hover {
  background-color: #555; /* 设置滑块悬浮时的颜色 */
}

::-webkit-scrollbar-track {
  background-color: transparent;
  border-radius: 4px; /* 设置轨道圆角 */
}

/* 去掉上下箭头（在较旧版本的 Windows 中有效） */
::-webkit-scrollbar-button {
  display: none; /* 隐藏箭头 */
}

/* 后续 section 使用渐变背景 */
section:not(:first-child) {
  background-image: linear-gradient(to bottom left, #eddfdc, #dddddd);
}

